# chatgpt-index-bot

./: .gitignore  Makefile  README.md
publisher/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
publisher/src/: main.py
subscriber/: .gcloudignore  Dockerfile  README.md  pyproject.toml
subscriber/src/: main.py  prompt.py  register.py  search.py  setup.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf  versions.tf
terraform/modules/account/: main.tf  outputs.tf  variables.tf
terraform/modules/publisher/: main.tf  variables.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
terraform/modules/secret/: main.tf  outputs.tf  variables.tf
terraform/modules/subscriber/: main.tf  outputs.tf  variables.tf
